--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,20 +1,10 @@
-
 stages:
-  train:
-    cmd: python src/train.py
+  augment_data:
+    cmd: python src/augmentations.py
     deps:
-      - src/train.py
-      - src/data_loader.py
-      - src/model.py
-      - src/utils.py
-      - src/config.yaml
-    params:
-      - epochs
-      - learning_rate
-      - batch_size
-      - experiment_name
+      - src/augmentations.py
+      - data/train/images
+      - data/train/labels
     outs:
-      - models/best_model.pt
-    metrics:
-      - metrics.json:
-          cache: false
+      - augmented_data/train/images
+      - augmented_data/train/labels
